@startuml
hide circle
skinparam classAttributeIconSize 0

class Parser {
  +parse(input) : Command
}

class "{abstract}\nCommand" as Command {
  +execute(list, ui)
}

class ListCommand {
  +execute(list, ui)
}

class DeleteCommand {
  -index : int
  +execute(list, ui)
}

class TransactionList {
  +add(t)
  +get(i) : Transaction
  +remove(i) : Transaction
  +size() : int
  +isEmpty() : boolean
}

class Ui {
  +readInput()
  +showMessage(message)
}

Parser --> Command
Command <|-- ListCommand
Command <|-- DeleteCommand

Command --> Ui : 1
ListCommand --> TransactionList : 1
DeleteCommand --> TransactionList : 1
TransactionList "1" --> "0..*" Transaction
@enduml